--- a/css/base.css
+++ b/css/base.css
@@ -4,7 +4,7 @@ body {
 }
 
 .Rubric {
-    padding-top: 85px;
+    padding-top: 120px;
     display: flex;
     justify-content: space-evenly;
 }
@@ -27,10 +27,32 @@ body {
 .text {
     background-color: rgb(50,50,50);
     padding: 25px;
-    margin: 25px;
+    margin: 55px;
     margin-left: 10%;
     margin-right: 10%;
     text-align: center;
     text-overflow: clip;
     border-radius: 10px;
+}
+
+ul {
+    text-align: left;
+    margin-left: 5vw;
+    margin-right: 5vw;
+}
+
+#downloads {
+    
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto;
+    grid-template-areas: 
+        ". windows android ."
+        ". windows linux ."
+        ". ios linux .";
+    row-gap: 20px;
+}
+
+@media screen and (min-aspect-ratio: 10/9) {
+    
 }
