--- a/css/base.css
+++ b/css/base.css
@@ -80,8 +80,9 @@ ul {
 button{
     background-color: rgba(255, 255, 255, .1);
     color: white;
-    border-width: 0px;
+    border: none;
     padding: 10px;
+    cursor: pointer;
 }
 button:hover{
     background-color:rgba(0, 0, 0, .3);
@@ -97,8 +98,33 @@ button:hover{
     border-radius: 10px;
 }
 
+/* From https://www.w3schools.com/howto/howto_js_collapsible.asp */
+.collapsible {
+    padding: 10px;
+    width: 100%;
+    text-align: left;
+    font-size: 15px;
+}
+.content {
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
 
-
+/* From https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp*/
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: rgb(50, 50, 50);
+}
+::-webkit-scrollbar-thumb {
+    background: rgb(100, 100, 100);
+}
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(70, 70, 70);
+}
 
 @media screen and (min-aspect-ratio: 10/8) {
     .text {
