--- a/css/navbar.css
+++ b/css/navbar.css
@@ -33,3 +33,14 @@ body {
     color: white;
 }
 
+/* 
+    From https://gist.github.com/gokulkrishh/242e68d1ee94ad05f488
+    ##Device = Most of the Smartphones Mobiles (Portrait)
+    ##Screen = B/w 320px to 479px
+*/
+
+@media (min-width: 320px) and (max-width: 480px) {
+    .navbar a {
+        font-size: 40px;
+    }
+}
