--- a/css/base.css
+++ b/css/base.css
@@ -50,7 +50,7 @@ ul {
     grid-template-rows: auto;
     grid-template-areas: 
         ". windows android ."
-        ". windows linux .";
+        ". windows . .";
     row-gap: 20px;
     padding-bottom: 50px;
 }
@@ -128,11 +128,11 @@ button:hover{
 
 @media screen and (min-aspect-ratio: 10/8) {
     .text {
-        margin-left: 15vw;
-        margin-right: 15vw;
+        margin-left: 20vw;
+        margin-right: 20vw;
     }
     #img {
-        width: 60vw;
+        width: 53vw;
     }
 }
 @media screen and (min-aspect-ratio: 10/6) {
