--- a/css/base.css
+++ b/css/base.css
@@ -78,7 +78,8 @@ ul {
 }
 
 button{
-    background-color: rgba(255, 255, 255, .1);
+    background-color: rgb(255, 255, 255);
+    opacity: 0.1;
     color: white;
     border: none;
     padding: 10px;
