--- a/css/base.css
+++ b/css/base.css
@@ -78,8 +78,7 @@ ul {
 }
 
 button{
-    background-color: rgb(255, 255, 255);
-    opacity: 0.1;
+    background-color: rgba(255, 255, 255, 0);
     color: white;
     border: none;
     padding: 10px;
