--- a/css/base.css
+++ b/css/base.css
@@ -78,7 +78,7 @@ ul {
 }
 
 button{
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgba(255, 255, 255, .1);
     color: white;
     border: none;
     padding: 10px;
